crates/crochet/tests/fail/multiple_errors.error.txt
Error: Incompatible types
   ╭─[<unknown>:3:5]
   │
 1 │ let add = (a: number, b: number): number => a + b;
   ·               ───┬──  
   ·                  ╰──── number
   · 
 3 │ add("hello", "world");
   ·     ───┬───  
   ·        ╰───── "hello"
───╯

Error: Incompatible types
   ╭─[<unknown>:7:5]
   │
 5 │ let add = (a, b) => a + b;
   ·            ┬  
   ·            ╰── number
   · 
 7 │ add("hello", "world");
   ·     ───┬───  
   ·        ╰───── "hello"
───╯
